[package]
name = "thrust"
version = "0.1.0"
description = "Thrift for Rust"
documentation = "https://thehydroimpulse.github.io/thrust/thrust/index.html"
homepage = "https://github.com/thehydroimpulse/thrust"
repository = "https://github.com/thehydroimpulse/thrust"
readme = "Readme.md"
keywords = ["thrift", "rpc", "async", "networking"]
license = "MIT"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]

[dependencies]
byteorder = "0.4"
docopt = "0.6"
rustc-serialize = "0.3"
mio = "0.6"
log = "0.3"
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dependencies.thrust_codegen]
path = "thrust-codegen"

[dependencies.thrust_parser]
path = "thrust-parser"
