[package]
name = "tokio-thrift"
version = "0.1.0"
description = "Thrift implementation on Tokio"
homepage = "https://github.com/KeenS/tokio-thrift"
repository = "https://github.com/KeenS/tokio-thrift"
readme = "Readme.md"
keywords = ["thrift", "rpc", "async", "networking"]
license = "MIT"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]

[dependencies]
byteorder = "0.4"
docopt = "0.6"
rustc-serialize = "0.3"
mio = "0.6"
log = "0.3"
futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dependencies.tokio-thrift-codegen]
path = "tokio-thrift-codegen"

[dependencies.tokio-thrift-parser]
path = "tokio-thrift-parser"
