[package]
name = "tokio-thrift"
version = "0.1.0"
description = "Thrift implementation on Tokio"
homepage = "https://github.com/KeenS/tokio-thrift"
repository = "https://github.com/KeenS/tokio-thrift"
readme = "Readme.md"
keywords = ["thrift", "rpc", "async", "networking"]
license = "MIT"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]

[[bin]]
name = "tokio-thrift"
path = "src/bin/tokio_thrift.rs"
doc = false

[dependencies]
byteorder = "0.4"
docopt = "0.6"
rustc-serialize = "0.3"
mio = "0.6"
log = "0.3"
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-thrift-codegen = { path = "tokio-thrift-codegen" }
