[package]
name = "tokio-thrift-bin"
version = "0.1.0"
description = "Thrift implementation on Tokio"
homepage = "https://github.com/KeenS/tokio-thrift"
repository = "https://github.com/KeenS/tokio-thrift"
readme = "Readme.md"
keywords = ["thrift", "rpc", "async", "networking"]
license = "MIT"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
workspace = "../"

[[bin]]
name = "tokio-thrift"
path = "src/main.rs"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
log = "0.3"
tokio-thrift-codegen = { path = "../tokio-thrift-codegen" }
