[package]
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "tokio-thrift-codegen"
version = "0.1.0"
license = "MIT"
description = "code generation library of tokio-thrift"
readme = "README.md"
documentation = "http://docs.rs/tokio-thrift-codegen"
repository = "https://github.com/KeenS/tokio-thrift"
keywords = ["thrift", "tokio", "rpc"]
categories = ["Network programming", "Asynchronous"]

[dependencies]
handlebars = "^0.22"
nom = "1.2.4"
rustc-serialize = "^0.3.15"
