[package]
name = "tokio-thrift"
version = "0.1.0"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
workspace = "../"


[dependencies]
byteorder = "0.4"
rustc-serialize = "0.3"
log = "0.3"
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
