[package]
name = "tokio-thrift"
version = "0.1.0"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>", "Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
license = "MIT"
description = "thrift runtime library based on tokio"
readme = "README.md"
documentation = "http://docs.rs/tokio-thrift"
repository = "https://github.com/KeenS/tokio-thrift"
keywords = ["thrift", "tokio", "rpc"]
categories = ["Network programming", "Asynchronous"]


[dependencies]
byteorder = "0.4"
rustc-serialize = "0.3"
log = "0.3"
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
