[package]
name = "tokio-thrift-macros-test"
version = "0.1.0"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>"]

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }


[dependencies.tokio-thrift-macros]
path = "../tokio-thrift-macros"

[dependencies.tokio-thrift]
path = ".."
