[package]
name = "tokio-thrift-macros-test"
version = "0.1.0"
authors = ["Daniel Fagnan <dnfagnan@gmail.com>"]

[dependencies]
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-thrift = { path = ".." }
tokio-thrift-macros = { path = "../tokio-thrift-macros" }

