[package]
name = "simple_server_client"
version = "0.1.0"
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]

[dependencies]
thrust = { path = "../../"}
thrust-tokio = { path = "../..//thrust-tokio"}
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
byteorder = "0.4"
