[package]
name = "simple_server_client"
version = "0.1.0"
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
workspace = "../../"
build = "build.rs"

[build-dependencies]
tokio-thrift-codegen = { path = "../../tokio-thrift-codegen" }

[dependencies]
tokio-thrift = { path = "../../tokio-thrift-lib"}
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
