[package]
name = "simple_server_client"
version = "0.1.0"
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
build = "build.rs"

[build-dependencies]
tokio-thrift-codegen = "0.1.0"

[dependencies]
tokio-thrift = "0.1.0"
futures = "0.1.3"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
